@@ -23,7 +23,7 @@ import com.epam.reportportal.service.ReportPortalClient;
 import com.epam.reportportal.util.test.CommonUtils;
 import com.epam.ta.reportportal.ws.model.FinishTestItemRQ;
 import com.epam.ta.reportportal.ws.model.log.SaveLogRQ;
-import com.intuit.karate.Results;
+import io.karatelabs.core.SuiteResult;
 import okhttp3.MultipartBody;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -37,14 +37,18 @@ import java.util.stream.Stream;
 import static com.epam.reportportal.karate.utils.TestUtils.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
+import static org.hamcrest.Matchers.endsWith;
+import static org.hamcrest.Matchers.startsWith;
 import static org.mockito.ArgumentMatchers.same;
 import static org.mockito.Mockito.*;
 
 public class ScenarioDescriptionErrorLogTest {
 
-	public static final String ERROR = "did not evaluate to 'true': actualFour != four\nclasspath:feature/simple_failed.feature:6";
-	public static final String ERROR_MESSAGE = "Then assert actualFour != four\n" + ERROR;
-	public static final String DESCRIPTION_ERROR_LOG = "Error:\n" + ERROR;
+	public static final String ERROR = "/feature/simple_failed.feature:6 actualFour != four";
+	public static final String ERROR_MESSAGE = """
+			Then actualFour != four
+			assert failed: actualFour != four""";
+	public static final String DESCRIPTION_ERROR_LOG = "Error:\n";
 	private static final String TEST_FEATURE = "classpath:feature/simple_failed.feature";
 	private final String launchUuid = CommonUtils.namedId("launch_");
 	private final String featureId = CommonUtils.namedId("feature_");
@@ -62,13 +66,13 @@ public class ScenarioDescriptionErrorLogTest {
 	@ParameterizedTest
 	@ValueSource(booleans = { true, false })
 	public void test_error_log_in_description(boolean report) {
-		Results results;
+		SuiteResult results;
 		if (report) {
-			results = TestUtils.runAsReport(rp, TEST_FEATURE);
+			results = TestUtils.runAsResultListener(rp, TEST_FEATURE);
 		} else {
-			results = TestUtils.runAsHook(rp, TEST_FEATURE);
+			results = TestUtils.runAsEventListener(rp, TEST_FEATURE);
 		}
-		assertThat(results.getFailCount(), equalTo(1));
+		assertThat(results.getFeatureFailedCount(), equalTo(1));
 
 		@SuppressWarnings("unchecked")
 		ArgumentCaptor<List<MultipartBody.Part>> logCaptor = ArgumentCaptor.forClass(List.class);
@@ -80,7 +84,7 @@ public class ScenarioDescriptionErrorLogTest {
 				.collect(Collectors.toList());
 
 		assertThat(logs, hasSize(greaterThan(0)));
-		SaveLogRQ log = logs.get(logs.size() - 1);
+		SaveLogRQ log = logs.getLast();
 		assertThat(log.getItemUuid(), oneOf(stepIds.toArray(new String[0])));
 		assertThat(log.getLaunchUuid(), equalTo(launchUuid));
 		assertThat(log.getMessage(), equalTo(ERROR_MESSAGE));
@@ -89,7 +93,7 @@ public class ScenarioDescriptionErrorLogTest {
 		verify(client, times(1)).finishTestItem(same(scenarioId), scenarioCaptorFinish.capture());
 
 		List<FinishTestItemRQ> scenarios = scenarioCaptorFinish.getAllValues();
-		FinishTestItemRQ scenario = scenarios.get(0);
-		assertThat(scenario.getDescription(), allOf(notNullValue(), equalTo(DESCRIPTION_ERROR_LOG)));
+		FinishTestItemRQ scenario = scenarios.getFirst();
+		assertThat(scenario.getDescription(), allOf(notNullValue(), startsWith(DESCRIPTION_ERROR_LOG), endsWith(ERROR)));
 	}
 }
