@@ -25,7 +25,7 @@ import com.epam.reportportal.util.test.CommonUtils;
 import com.epam.reportportal.utils.formatting.MarkdownUtils;
 import com.epam.ta.reportportal.ws.model.FinishTestItemRQ;
 import com.epam.ta.reportportal.ws.model.log.SaveLogRQ;
-import com.intuit.karate.Results;
+import io.karatelabs.core.SuiteResult;
 import okhttp3.MultipartBody;
 import org.apache.commons.lang3.tuple.Pair;
 import org.junit.jupiter.api.BeforeEach;
@@ -39,41 +39,31 @@ import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static com.epam.reportportal.karate.ReportPortalUtils.MARKDOWN_DELIMITER_PATTERN;
 import static com.epam.reportportal.karate.utils.TestUtils.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
+import static org.hamcrest.Matchers.endsWith;
+import static org.hamcrest.Matchers.startsWith;
 import static org.mockito.ArgumentMatchers.same;
 import static org.mockito.Mockito.*;
 
 public class ScenarioDescriptionErrorLogWithDescriptionAndExamplesTest {
 
-	public static final String MARKDOWN_DELIMITER_PATTERN_THREE_ARGS = "%s\n\n---\n\n%s\n\n---\n\n%s";
-	public static final String ERROR = "did not evaluate to 'true': mathResult == 5\nclasspath:feature/simple_failed_description_examples.feature:8";
-	public static final String ERROR_MESSAGE = "Then assert mathResult == 5\n" + ERROR;
-	public static final String DESCRIPTION_ERROR_LOG = "Error:\n" + ERROR;
-	public static final String DESCRIPTION = "This is my Scenario description.";
+	public static final String ERROR_END = "build/resources/test/feature/simple_failed_description_examples.feature:8 mathResult == 5";
+	public static final String ERROR_MESSAGE = """
+			Then mathResult == 5
+			assert failed: mathResult == 5""";
+	public static final String DESCRIPTION_STRING = "This is my Scenario description.";
+	public static final String ERROR = "Error:\n";
 	private static final String EXAMPLE_PARAMETERS_DESCRIPTION_PATTERN =
 			"Parameters:\n\n" + MarkdownUtils.TABLE_INDENT + "| vara | varb | result |\n" + MarkdownUtils.TABLE_INDENT
 					+ "|------|------|--------|\n" + MarkdownUtils.TABLE_INDENT;
 	public static final String FIRST_EXAMPLE_DESCRIPTION = EXAMPLE_PARAMETERS_DESCRIPTION_PATTERN + "|  2   |  2   |   4    |";
 	public static final String SECOND_EXAMPLE_DESCRIPTION = EXAMPLE_PARAMETERS_DESCRIPTION_PATTERN + "|  1   |  2   |   5    |";
 
-	public static final String FIRST_EXAMPLE_DESCRIPTION_WITHOUT_ERROR_LOG = String.format(
-			MARKDOWN_DELIMITER_PATTERN,
-			FIRST_EXAMPLE_DESCRIPTION,
-			DESCRIPTION
-	);
-	public static final String SECOND_EXAMPLE_DESCRIPTION_WITH_ERROR_LOG = String.format(
-			MARKDOWN_DELIMITER_PATTERN_THREE_ARGS,
-			SECOND_EXAMPLE_DESCRIPTION,
-			DESCRIPTION,
-			DESCRIPTION_ERROR_LOG
-	);
-
 	private static final String TEST_FEATURE = "classpath:feature/simple_failed_description_examples.feature";
 	private final String featureId = CommonUtils.namedId("feature_");
-	private final List<String> exampleIds = Stream.generate(() -> CommonUtils.namedId("example_")).limit(2).collect(Collectors.toList());
+	private final List<String> exampleIds = Stream.generate(() -> CommonUtils.namedId("example_")).limit(2).toList();
 	private final List<Pair<String, List<String>>> stepIds = exampleIds.stream()
 			.map(e -> Pair.of(e, Stream.generate(() -> CommonUtils.namedId("step_")).limit(2).collect(Collectors.toList())))
 			.collect(Collectors.toList());
@@ -90,15 +80,15 @@ public class ScenarioDescriptionErrorLogWithDescriptionAndExamplesTest {
 	@ParameterizedTest
 	@ValueSource(booleans = { true, false })
 	public void test_error_log_and_examples_in_description(boolean report) {
-		Results results;
+		SuiteResult results;
 
 		if (report) {
-			results = TestUtils.runAsReport(rp, TEST_FEATURE);
+			results = TestUtils.runAsResultListener(rp, TEST_FEATURE);
 		} else {
-			results = TestUtils.runAsHook(rp, TEST_FEATURE);
+			results = TestUtils.runAsEventListener(rp, TEST_FEATURE);
 		}
 
-		assertThat(results.getFailCount(), equalTo(1));
+		assertThat(results.getFeatureFailedCount(), equalTo(1));
 
 		@SuppressWarnings("unchecked")
 		ArgumentCaptor<List<MultipartBody.Part>> logCaptor = ArgumentCaptor.forClass(List.class);
@@ -110,7 +100,7 @@ public class ScenarioDescriptionErrorLogWithDescriptionAndExamplesTest {
 				.collect(Collectors.toList());
 
 		assertThat(logs, hasSize(greaterThan(0)));
-		SaveLogRQ log = logs.get(logs.size() - 1);
+		SaveLogRQ log = logs.getLast();
 		assertThat(log.getMessage(), equalTo(ERROR_MESSAGE));
 
 		ArgumentCaptor<FinishTestItemRQ> scenarioCaptor = ArgumentCaptor.forClass(FinishTestItemRQ.class);
@@ -121,14 +111,26 @@ public class ScenarioDescriptionErrorLogWithDescriptionAndExamplesTest {
 				stepIds.size(),
 				ArgumentCaptor.forClass(FinishTestItemRQ.class)
 		));
-		stepIds.forEach(pair -> pair.getValue().forEach(id -> verify(client).finishTestItem(same(id), stepCaptors.get(0).capture())));
+		stepIds.forEach(pair -> pair.getValue().forEach(id -> verify(client).finishTestItem(same(id), stepCaptors.getFirst().capture())));
 
-		FinishTestItemRQ firstScenarioRq = scenarioCaptor.getAllValues().get(0);
+		FinishTestItemRQ firstScenarioRq = scenarioCaptor.getAllValues().getFirst();
 		assertThat(firstScenarioRq.getStatus(), allOf(notNullValue(), equalTo(ItemStatus.PASSED.name())));
-		assertThat(firstScenarioRq.getDescription(), allOf(notNullValue(), equalTo(FIRST_EXAMPLE_DESCRIPTION_WITHOUT_ERROR_LOG)));
+		assertThat(
+				firstScenarioRq.getDescription(),
+				allOf(notNullValue(), equalTo(MarkdownUtils.asTwoParts(FIRST_EXAMPLE_DESCRIPTION, DESCRIPTION_STRING)))
+		);
 
 		FinishTestItemRQ secondScenarioRq = scenarioCaptor.getAllValues().get(1);
 		assertThat(secondScenarioRq.getStatus(), allOf(notNullValue(), equalTo(ItemStatus.FAILED.name())));
-		assertThat(secondScenarioRq.getDescription(), allOf(notNullValue(), equalTo(SECOND_EXAMPLE_DESCRIPTION_WITH_ERROR_LOG)));
+		assertThat(
+				secondScenarioRq.getDescription(), allOf(
+						notNullValue(),
+						startsWith(MarkdownUtils.asTwoParts(
+								SECOND_EXAMPLE_DESCRIPTION,
+								MarkdownUtils.asTwoParts(DESCRIPTION_STRING, ERROR)
+						)),
+						endsWith(ERROR_END)
+				)
+		);
 	}
 }
